2003-03-18  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (realize): call gtk_im_context_set_client_window
	(unrealize): ditto
	(gtk_html_init): connect new im callbacks

	* Makefile.am: removed gtkhtml-im.[ch]

	* gtkhtml.c (key_press_event): use im context
	(key_release_event): handle this event
	(focus_in_event): use im context
	(focus_out_event): ditto

2003-03-17  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (html_clueflow_get_line_offset): pass line_offset
	to html_text_text_line_length

	* htmltextslave.c (html_get_glyphs_non_tab): make this function
	public

	* htmlgdkpainter.c
	(html_gdk_painter_text_itemize_and_prepare_glyphs): don't count
	tab width

2003-03-14  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (draw_spell_error): use shift_items

	* htmlplainpainter.c (draw_text): use shift_items

2003-03-13  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (check_point): remove incorrect addition of margins
	in point calculation.

2003-03-12  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_text_line_length): fix line_offset
	calculation

	* htmltextslave.c (html_text_slave_get_line_offset): removed
	line_offset parameter, updated all callers

	* htmlclueflow.c (html_clueflow_get_line_offset): don't allow head
	to be set to NULL

	* htmltextslave.c (calc_width): fix width calculation for tabs

2003-03-11  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_glyphs_base_text): return glyphs

	* htmlprinter.c (draw_text): fix print_y position

2003-03-10  Larry Ewing  <lewing@ximian.com>

	* htmlprinter.c (print_pixbuf): add a helper function to print
	pixbufs now that gnome print no longer has a print_pixbuf call.

2003-03-09  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (get_glyphs_part): fix the check for itmems.

2003-03-08  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_timer_event): flush the update timers
	before removing them.

2003-03-07  Radek Doulik  <rodo@ximian.com>
